<resources>
    <string name="auth_type" translatable="false">de.htwdd.htwdresden</string>
    <string name="account_title">Nutzerkonto</string>
    <string name="not_logged_in_text">Du bist mit keinem Account angemeldet. Um die volle Funktionalität nutzen zu können, melde Dich bitte an.</string>
    <string name="app_name" translatable="false">HTW Dresden</string>
    <string name="app_slogan">Die App für Studenten der HTW Dresden</string>
    <string name="app_developer_name" translatable="false">Kay Förster</string>
    <string name="app_email" translatable="false">app@htw-dresden.de</string>
    <string name="app_github" translatable="false">github.com/HTWDD/HTWDresden</string>
    <string name="period_date_format">dd.MM.yyyy</string>
    <string name="general_repeat">Wiederholen</string>
    <string name="general_cancel">Abbrechen</string>
    <string name="general_close">Schließen</string>
    <string name="general_add">Hinzufügen</string>
    <string name="general_update">Aktualisieren</string>
    <string name="general_delete">Löschen</string>
    <string name="general_select_option">Bitte auswählen</string>
    <string name="spinner_select_option">auswählen...</string>
    <string name="general_concat" translatable="false">%1$s %2$s</string>
    <string name="navi_overview">Übersicht</string>
    <string name="navi_mensa">Mensa</string>
    <string name="navi_timetable">Stundenplan</string>
    <string name="navi_room_timetable">Belegungsplan</string>
    <string name="navi_exams">Noten / Prüfungen</string>
    <string name="navi_uni_administration">Verwaltung</string>
    <string name="navi_campus">Campusplan</string>
    <string name="navi_settings">Einstellungen</string>
    <string name="navi_about">Über die App</string>
    <string name="navi_head_uni">Uni Alltag</string>
    <string name="navi_head_settings">Optionen</string>
    <string name="info_no_settings">Kein korrektes Nutzerkonto!</string>
    <string name="info_error">[ERROR] Sorry, hier ging was schief :( Bitte melde diesen Fehler!</string>
    <string name="info_error_parse">Fehler beim Parsen</string>
    <string name="info_error_save">Fehler beim Speichern</string>
    <string name="info_error_error">Fehler beim Löschen</string>
    <string name="info_no_internet">Keine Internetverbindung!</string>
    <string name="info_internet_timeout">Zeitüberschreitung bei der Anfrage!</string>
    <string name="info_internet_no_connection">Konnte keine Verbindung mit dem Webservice herstellen!</string>
    <string name="info_internet_error">Unbekannter Netzwerkfehler</string>
    <string name="academic_year_winter">Wintersemester</string>
    <string name="academic_year_summer">Sommersemester</string>
    <string name="settings_category_access_data">Zugangsdaten</string>
    <string name="settings_category_study">Studium</string>
    <string name="settings_category_profs">Professoren</string>
    <string name="settings_category_profs_summary">Einstellungen ausschließlich für Professoren</string>
    <string name="settings_category_other">sonstige Einstellungen</string>
    <string name="settings_category_app_intern">HTWDresden intern</string>
    <string name="settings_bibNummer">Bibliotheksnummer</string>
    <string name="settings_bibNummer_summary">Wird zur Notenabfrage benötigt</string>
    <string name="settings_bibNummer_dialogMessage">Die Bibliotheksnummer findest Du auf Deinem Studentenausweis. Sie hat die Form sXXXXX. Eingabe ohne führendes s!</string>
    <string name="settings_rzLogin" translatable="false">RZLogin</string>
    <string name="settings_rzLogin_summary">Wird zur Notenabfrage benötigt</string>
    <string name="settings_rzLogin_dialogMessage">Dein UNIX-Passwort welches Du bspw. zur Anmeldung bei OPAL verwendest.</string>
    <string name="settings_jahrgang">Jahrgang</string>
    <string name="settings_studiengang">Studiengang</string>
    <string name="settings_studiengang_summary">Verwendung: Stundenplan, Prüfungen</string>
    <string name="settings_studiengruppe">Studiengruppe</string>
    <string name="settings_studienrichtung">Studienrichtung (Optional: Filter für Prüfungen)</string>
    <string name="settings_studienrichtung_summary">(Optional: Filter für Prüfungen)</string>
    <string name="settings_prof_only">Die Funktion steht ausschließlich für Professoren zur Verfügung!</string>
    <string name="settings_prof_name">Prüfer-Name</string>
    <string name="settings_prof_name_summary">Verwendung: Prüfungen</string>
    <string name="settings_prof_id">Professoren-Kennung</string>
    <string name="settings_prof_id_summary">Verwendung: Stundenplan</string>
    <string name="settings_prof_id_message">Deine individuelle Professoren-Kennung erhälst Du nach Anfrage! Schreib uns einfach: app@htw-dresden.de</string>
    <string name="settings_audio">Automatisches Stummschalten</string>
    <string name="settings_audio_summary">Während einer Lehrveranstaltung wird Dein Handy automatisch stumm geschaltet.</string>
    <string name="settings_audio_request_permission">Berechtigung wird benötigt zum Ändern der Benachrichtigungseinstellungen</string>
    <string name="settings_exam_results">Benachrichtigung über neue Noten</string>
    <string name="settings_exam_results_summary">Stelle ein, ob und wie oft Du über neue Noten automatisch benachrichtigt werden möchtest.</string>
    <string name="settings_firebase_analytics" translatable="false">Analyse</string>
    <string name="settings_firebase_crashlytics" translatable="false">Bug-Reporting</string>
    <string name="settings_firebase_disabled">Eingeschaltet</string>
    <string name="settings_firebase_enabled">Ausgeschaltet</string>
    <string name="mensa_tab_today">Heute</string>
    <string name="mensa_tab_this_week">Aktuelle Woche</string>
    <string name="mensa_tab_next_week">Nächste Woche</string>
    <string name="mensa_no_offer">Kein Angebot vorhanden!</string>
    <string name="mensa_no_offer_image">&#127869;</string>
    <string name="mensa_no_meals">Kein Essen</string>
    <string name="mensa_no_offer_day">Hier gibt es heute nichts zu essen &#128556;</string>
    <string name="mensa_no_offer_week">In der Woche gibt es hier leider nichts zu essen &#128542;</string>
    <string name="mensa_euro" translatable="false">%.2f€</string>
    <string name="mensa_euro_string" translatable="false">%s€</string>
    <string name="mensa_credit_title">Mensa Guthaben</string>
    <string name="mensa_credit_current">Aktuelles Guthaben:</string>
    <string name="mensa_credit_last_transaction">letzte Abbuchung:</string>
    <string name="mensa_price_student">Student %.2f€ </string>
    <string name="mensa_price_employee">Mitarbeiter %.2f€</string>
    <string name="mensa_price_student_no_price">Student: keine Angabe</string>
    <string name="mensa_price_employee_no_price">Mitarbeiter: keine Angabe</string>
    <string name="mensa_sold_out">Ausverkauft</string>
    <string name="mensa_meal_info_image">Vorschau</string>
    <string name="mensa_meal_info_pork">Schweinefleisch</string>
    <string name="mensa_meal_info_beef">Rindfleisch</string>
    <string name="mensa_meal_info_vegetarian">Vegetarisch</string>
    <string name="mensa_meal_info_vegan">Vegan</string>
    <string name="mensa_meal_info_garlic">Knoblauch</string>
    <string name="mensa_meal_info_alcohol">Alkohol</string>
    <string name="timetable_overview_today">Heute</string>
    <string name="timetable_overview_lessons" translatable="false">%1$s (%2$s)</string>
    <string name="timetable_overview_options_menu_filter_week">Wochenfilter</string>
    <string name="timetable_overview_options_menu_filter_hidden">versteckte Stunden</string>
    <string name="timetable_overview_options_menu_timetable_reset">Stundenplan zurücksetzen</string>
    <string name="timetable_overview_options_menu_timetable_reset_message">Bei diesem Schritt werden alle individuellen Änderungen verworfen und der Stundenplan neu synchronisiert.</string>
    <string name="timetable_sync_success">Stundenplan erfolgreich aktualisiert!</string>
    <string name="timetable_sync_notFound">Studiengruppe oder Webservice nicht gefunden.</string>
    <string name="timetable_save_error">Fehler beim Speichern des Stundenplans!</string>
    <string name="timetable_add">Stunde hinzufügen</string>
    <string name="timetable_details">Stunden-Details</string>
    <string name="timetable_tab_current_week">Aktuelle Woche (%d)</string>
    <string name="timetable_tab_next_week">Nächste Woche (%d)</string>
    <string name="timetable_tab_even_week">gerade Woche</string>
    <string name="timetable_tab_odd_week">ungerade Woche</string>
    <string name="timetable_moreLessons">mehrere Stunden</string>
    <string name="timetable_moreLessonsPoints" translatable="false">***</string>
    <string name="timetable_only_KW">einige KW</string>
    <string name="timetable_ds_grid" translatable="false">%1$s\n-\n%2$s</string>
    <string name="timetable_ds_list">%1$d. DS (%2$s - %3$s)</string>
    <string name="timetable_ds_list_simple" translatable="false">%1$s - %2$s</string>
    <string name="timetable_calendar_week">%d. KW</string>
    <string name="timetable_edit_activity_titel">Stunde bearbeiten</string>
    <string name="timetable_edit_lessonName_hint">Name der Lehrveranstaltung</string>
    <string name="timetable_edit_lessonTag_hint">Kurzform</string>
    <string name="timetable_edit_lessonType">Art</string>
    <string name="timetable_edit_lessonProf_hint">Name des Dozenten</string>
    <string name="timetable_edit_lessonRoom">Raum</string>
    <string name="timetable_edit_label_time">Zeitpunkt</string>
    <string name="timetable_edit_label_general">Allgemein</string>
    <string name="timetable_edit_lessonWeek">Woche</string>
    <string name="timetable_edit_lessonDay">Tag</string>
    <string name="timetable_edit_lessonDS">Zeit</string>
    <string name="exams_exams">Prüfungen</string>
    <string name="exams_no_results_icon" translatable="false">🤯</string>
    <string name="exams_no_results_title">Keine Prüfungen</string>
    <string name="exams_no_results_message">😖 Ich kann leider\nkeine Prüfungen für Dich finden.\nSind Deine Zugangsdaten korrekt?</string>
    <string name="about_info">Informationen</string>
    <string name="about_info_message">Die HTWDresden-App ist ein privates Projekt. Es ist keine offizielle App der HTW Dresden oder einer anderen Institution.
        \n\nEntwickelt mit der freundlichen Unterstützung des HTW-Rechenzentrums.\n\nZu keinem Zeitpunkt werden private Daten wie S-Nummer oder Passwörter an nicht
        HTW-Server übertragen.</string>
    <string name="about_developer">Entwickler</string>
    <string name="about_version">Version</string>
    <string name="about_contact">Kontakt</string>
    <string name="about_project">Projekt</string>
    <string name="password">UNIX-Passwort</string>
    <string name="sign_in">Einloggen</string>
    <string name="sNummer">s-Nummer</string>
    <string name="logo_htw">Logo HTW</string>
    <string name="analytics_text_changing">Du kannst Deine Entscheidung jederzeit in den Einstellungen ändern.</string>
    <string name="analytics_text_helping">Möchtest Du uns dabei helfen?</string>
    <string name="crashlytics">Crashlytics</string>
    <string name="crashlytics_text_content">Wir würden gern Google Crashlytics bei Deinem Gerät nutzen, um die App stetig zu verbessern.</string>
    <string name="crashlytics_text_summary">Dabei werden bei einem App-Absturz gerätespezifische Daten erfasst und anonymisiert an die Google Inc. Server übertragen. Die erhobenen Daten werden nicht an Dritte weitergegeben.</string>
    <string name="login_with_img">Anmelden</string>
    <string name="finish_text_summary">Viel Erfolg im Studium.</string>
    <string name="finish_text_content">Die Einrichtung ist abgeschlossen.</string>
    <string name="finish_text_header">Viel Spaß!</string>
</resources>