<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_overview"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/navi_overview" />
        <item android:title="@string/navi_head_uni">
            <menu>
                <item
                    android:id="@+id/navigation_mensa"
                    android:icon="@drawable/food"
                    android:title="@string/navi_mensa" />
                <item
                    android:id="@+id/navigation_timetable"
                    android:icon="@drawable/ic_access_time_24dp"
                    android:title="@string/navi_timetable" />
                <item
                    android:id="@+id/navigation_room_timetable"
                    android:icon="@drawable/ic_room_24dp"
                    android:title="@string/navi_room_timetable" />
                <item
                    android:id="@+id/navigation_exams"
                    android:icon="@drawable/ic_mode_edit_24dp"
                    android:title="@string/navi_exams" />
                <item
                    android:id="@+id/navigation_uni_administration"
                    android:icon="@drawable/ic_supervisor_account_24dp"
                    android:title="@string/navi_uni_administration" />
                <item
                    android:id="@+id/navigation_campus_plan"
                    android:icon="@drawable/ic_navigation_24dp"
                    android:title="@string/navi_campus" />
            </menu>
        </item>
        <item android:title="@string/navi_head_htwevents">
            <menu>
                <item
                    android:id="@+id/navigation_htwEvents"
                    android:icon="@drawable/ic_settings_24dp"
                    android:title="@string/navi_htwevents" />
                <item
                    android:id="@+id/navigation_htwEventsEventCreator"
                    android:icon="@drawable/ic_settings_24dp"
                    android:title="@string/navi_htwEventsEventErstellen" />
            </menu>
        </item>
        <item android:title="@string/navi_head_settings">
            <menu>
                <item
                    android:id="@+id/navigation_settings"
                    android:icon="@drawable/ic_settings_24dp"
                    android:title="@string/navi_settings" />
                <item
                    android:id="@+id/navigation_about"
                    android:icon="@drawable/ic_info_outline_24dp"
                    android:title="@string/navi_about" />
            </menu>
        </item>
    </group>
</menu>