<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container">


    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_htw"
        android:src="@drawable/htw_logo_round"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/middle_gray"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/crashlytics"
        android:textSize="32dp"/>
    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/middle_gray"
        android:textAlignment="center"
        android:text="@string/crashlytics_text_content"
        android:textSize="16dp"/>
    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/middle_gray"
        android:textAlignment="center"
        android:text="@string/crashlytics_text_summary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/primary"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16dp"
        android:text="@string/analytics_text_helping"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/htw_orange"
        android:textAlignment="center"
        android:textStyle="italic"
        android:text="@string/analytics_text_changing"/>

    <Button
        android:id="@+id/btnCrashlytics"
        android:enabled="false"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/rounded_button_inactive"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/yes_button"
        android:textColor="@color/white"/>

</LinearLayout>