<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#FFFFFF"
              android:paddingLeft="17dp"
              android:paddingRight="17dp"
        >

    <EditText android:id="@+id/accountName"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:hint="@string/sNummer"
              android:inputType="text"
              android:padding="10dp"
            />

    <EditText android:id="@+id/accountPassword"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:inputType="textPassword"
              android:hint="@string/password"
              android:padding="10dp"
            />
    <EditText android:id="@+id/stdRichtung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:hint="@string/settings_studienrichtung"
        android:padding="10dp"
        />

    <Spinner
        android:id="@+id/ctvJahrgang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        />

    <Spinner
        android:id="@+id/ctvStudiengang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        />

    <Spinner
        android:id="@+id/ctvStudiengruppe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:spinnerMode="dropdown"
        />

    <Button android:id="@+id/submit"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:text="@string/sign_in"
              android:padding="10dp"/>

</LinearLayout>

