<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tvIcon"
            style="@style/HTW.Empty.View.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exams_no_results_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

    <TextView
            android:id="@+id/tvTitle"
            style="@style/HTW.Empty.View.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/exams_no_results_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIcon" />

    <TextView
            android:id="@+id/tvMessage"
            style="@style/HTW.Empty.View.Message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/exams_no_results_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
            android:id="@+id/btnEmptyAction"
            android:visibility="gone"
            style="@style/Widget.AppCompat.Button.Colored.HTW"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_with_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>