<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/studyYearSpinner"
        android:text="@string/settings_jahrgang"
        android:textAppearance="@style/TextAppearance.AppCompat"/>

    <Spinner
        android:id="@+id/studyYearSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/studyCourseSpinner"
        android:text="@string/settings_studiengang"
        android:textAppearance="@style/TextAppearance.AppCompat"/>

    <Spinner
        android:id="@+id/studyCourseSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/studyGroupSpinner"
        android:text="@string/settings_studiengruppe"
        android:textAppearance="@style/TextAppearance.AppCompat"/>

    <Spinner
        android:id="@+id/studyGroupSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>